# marlo-mcp

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
marlo_mcp/: main.py
marlo_mcp/client/: schema.py
